--- a/suicide-analysis.ipynb
+++ b/suicide-analysis.ipynb
@@ -4,23 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Research Question: Does the GDP of a country influence its suicide rate? "
+    "# Research Question: Does the GDP/HDI of a country influence its suicide rate? "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Furthermore, we would like to see if the amount of suicides differs across various age groups. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Furthermore, we would like to see if the amount of suicides differs across various age groups. \n",
+    "Over a ten year period, we will analyze specific countries of differing economic classification: \n",
+    "\n",
+    "Candidates: \n",
+    "Sweden\n",
+    "US\n",
+    "Japan\n",
+    "Thailand \n",
+    "Mexico \n",
+    "Brazil \n",
+    "Maritius \n",
+    "Albania \n",
+    "Kyrgyzstan \n",
+    "Luxembourg\n",
+    "\n",
     "//Other ideas: \n",
-    "Does quality of life influence suicide rate? \n",
-    "Can we answer some philosophical question here? (e.g. Is it so, that a simple life (money-wise or not) is all one needs to sustain a life?)"
+    "We want to analyze (over 10 years) the rate of suicide and GDP for that country. \n",
+    "Can we answer some philosophical question here? (e.g. Is it so, that having basic needs (money-wise or not) is all one needs to sustain life? Does having a lot of money, or having a chance at living well stop people from committing suicide?)\n"
    ]
   },
   {
@@ -1194,6 +1202,65 @@
    "source": [
     "data = pd.read_csv(\"suicide_statistics.csv\")\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Albania', 'Antigua and Barbuda', 'Argentina', 'Armenia', 'Aruba',\n",
+       "       'Australia', 'Austria', 'Azerbaijan', 'Bahamas', 'Bahrain',\n",
+       "       'Barbados', 'Belarus', 'Belgium', 'Belize',\n",
+       "       'Bosnia and Herzegovina', 'Brazil', 'Bulgaria', 'Cabo Verde',\n",
+       "       'Canada', 'Chile', 'Colombia', 'Costa Rica', 'Croatia', 'Cuba',\n",
+       "       'Cyprus', 'Czech Republic', 'Denmark', 'Dominica', 'Ecuador',\n",
+       "       'El Salvador', 'Estonia', 'Fiji', 'Finland', 'France', 'Georgia',\n",
+       "       'Germany', 'Greece', 'Grenada', 'Guatemala', 'Guyana', 'Hungary',\n",
+       "       'Iceland', 'Ireland', 'Israel', 'Italy', 'Jamaica', 'Japan',\n",
+       "       'Kazakhstan', 'Kiribati', 'Kuwait', 'Kyrgyzstan', 'Latvia',\n",
+       "       'Lithuania', 'Luxembourg', 'Macau', 'Maldives', 'Malta',\n",
+       "       'Mauritius', 'Mexico', 'Mongolia', 'Montenegro', 'Netherlands',\n",
+       "       'New Zealand', 'Nicaragua', 'Norway', 'Oman', 'Panama', 'Paraguay',\n",
+       "       'Philippines', 'Poland', 'Portugal', 'Puerto Rico', 'Qatar',\n",
+       "       'Republic of Korea', 'Romania', 'Russian Federation',\n",
+       "       'Saint Kitts and Nevis', 'Saint Lucia',\n",
+       "       'Saint Vincent and Grenadines', 'San Marino', 'Serbia',\n",
+       "       'Seychelles', 'Singapore', 'Slovakia', 'Slovenia', 'South Africa',\n",
+       "       'Spain', 'Sri Lanka', 'Suriname', 'Sweden', 'Switzerland',\n",
+       "       'Thailand', 'Trinidad and Tobago', 'Turkey', 'Turkmenistan',\n",
+       "       'Ukraine', 'United Arab Emirates', 'United Kingdom',\n",
+       "       'United States', 'Uruguay', 'Uzbekistan'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"country\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_df = data.dropna(subset=['HDI for year'], inplace=True)\n",
+    "print(new_df)"
    ]
   },
   {
